--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <div class="logo">Adágio dos Elfos</div>
     <nav>
       <a href="#" class="active">Página inicial</a>
-      <a href="#">Onde Comprar</a>
+      <a href="pag2.html">Onde Comprar</a>
       <a href="#">Os Livros</a>
       <a href="#">Personagens</a>
       <a href="#">O Mundo Havilá</a>
