--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       <a href="#">Os Livros</a> 
       <a href="#">Personagens</a>
       <a href="#">O Mundo Havilá</a>
-      <a href="#">O Autor</a>
+      <a href="/o_autor.html">O Autor</a>
       <a href="#">Contactos</a>
     </nav>
   </header>
