--- a/o_autor.html
+++ b/o_autor.html
@@ -1,1 +1,93 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>O Autor</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 40px;
+            background-color: #f9f9f9;
+            color: #333;
+        }
+        header {
+            text-align: center;
+            margin-bottom: 30px;
+        }
+        h1 {
+            font-size: 2.5em;
+            color: #2c3e50;
+        }
+        section {
+            max-width: 800px;
+            margin: 0 auto 40px auto;
+            background-color: #fff;
+            padding: 20px 30px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        }
+        h2 {
+            color: #2980b9;
+            margin-top: 0;
+        }
+        p {
+            line-height: 1.6;
+        }
+        footer {
+            text-align: center;
+            font-size: 0.9em;
+            color: #777;
+        }
+        a {
+            color: #2980b9;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>O Autor</h1>
+        <p>Bem-vindo ao blog pessoal do escritor</p>
+    </header>
+
+    <section>
+        <h2>Sobre Mim</h2>
+        <p><!-- Coloque aqui uma breve apresentação pessoal --></p>
+        <p><em>Exemplo: Olá, sou [Nome do Autor], escritor e apaixonado por literatura. Aqui compartilho minha trajetória e minhas obras.</em></p>
+    </section>
+
+    <section>
+        <h2>Minhas Obras</h2>
+        <ul>
+            <!-- Coloque aqui a lista das suas obras -->
+            <li>Obra 1 - Descrição breve</li>
+            <li>Obra 2 - Descrição breve</li>
+            <li>Obra 3 - Descrição breve</li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Curiosidades Sobre Mim</h2>
+        <p><!-- Coloque aqui algumas curiosidades pessoais --></p>
+    </section>
+
+    <section>
+        <h2>Meus Links</h2>
+        <ul>
+            <!-- Coloque aqui os links para suas redes, entrevistas ou site oficial -->
+            <li><a href="#">Site oficial</a></li>
+            <li><a href="#">Redes sociais</a></li>
+            <li><a href="#">Entrevistas</a></li>
+        </ul>
+    </section>
+
+    <footer>
+        <p>© 2025 - Blog pessoal do autor</p>
+    </footer>
+</body>
+</html>
 
