--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background-color: #f9f7f3;
+      background-color: #000000;
     }
 
     /* Estilo da barra superior com botão do YouTube */
